# sparsemat

./: .gitignore  CMakeLists.txt  list.c  list.h  list_i.c  list_i.h  ll_float.c  ll_float.h  ll_int.c  ll_int.h  main.c  matcoo.c  matcoo.h  matcoo_i.c  matcoo_i.h  matcsc.c  matcsc.h  matcsc_i.c  matcsc_i.h  matcsr.c  matcsr.h  matcsr_i.c  matcsr_i.h  test.c
data/: 21726929_20082019_1300_ad.out  21726929_21082019_1201_sc.out  21726929_22082019_2359_tr.out  21726929_23082019_0000_mm.out  21726929_24082019_1234_ts.out  float1.in  float123.in  float2.in  float3.in  float_dp23.in  float_dp34.in
data/e/: README.md  float128.in  float256.in  float64.in
data/e/ad/: 21726929_03092019_2061_ad.out  21726929_03092019_4996_ad.out  21726929_03092019_5173_ad.out  21726929_03092019_5687_ad.out  21726929_03092019_7851_ad.out  21726929_03092019_8447_ad.out  21726929_03092019_9766_ad.out
data/e/mm/: 21726929_03092019_1528_mm.out  21726929_03092019_253_mm.out  21726929_03092019_3649_mm.out  21726929_03092019_5324_mm.out  21726929_03092019_5443_mm.out  21726929_03092019_7584_mm.out
data/e/sm/: 21726929_03092019_2746_sm.out  21726929_03092019_3266_sm.out  21726929_03092019_3487_sm.out  21726929_03092019_3933_sm.out  21726929_03092019_4634_sm.out  21726929_03092019_5486_sm.out  21726929_03092019_5893_sm.out  21726929_03092019_8222_sm.out
data/e/tr/: 21726929_03092019_1591_tr.out  21726929_03092019_2378_tr.out  21726929_03092019_4049_tr.out  21726929_03092019_52_tr.out  21726929_03092019_5847_tr.out  21726929_03092019_7832_tr.out  21726929_03092019_8150_tr.out  (+1 more)
(+8 files in other folders)
